Versión 1.1 de la ramaSesion10: Trabajando con estilos css

--- a/Sesión 10(14-10-2019)/practica1.html
+++ b/Sesión 10(14-10-2019)/practica1.html
@@ -10,10 +10,17 @@
             color: purple;
         }
     </style>
+    <link rel="stylesheet" type="text/css" href="css/hojaEstilos1.css">
 </head>
 <body>
     <h1>Sesióm 10 - UT2</h1>
     <h2>Trabajo con hojas de estilos internas</h2>
     <p class="claseColor">Este párrafo utiliza la clase "Estilo de color"</p>
+
+    <h2>Trabajo con hojas de estilo externas</h2>
+    <p>El spam que está dentro de este párrafo, utilizará una <span class="colorHojaExterna">clase implementada de una hoja de estilos externa</span></p>
+
+    <h2>Trabajo con estilos de aplicación en línea</h2>
+    <p>El spam que está dentro de este párrafo, utilizará un <span style="color: royalblue;">estilo en línea</span></p>
 </body>
 </html>
