Versión 1.1 de la rama Sesion13: Practicando con estilos, margenes y demás minucias.

--- a/Sesión 13(24-10-2019)/Ejercicio1.html
+++ b/Sesión 13(24-10-2019)/Ejercicio1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,170 @@
     <title>Ejercicio 1 - Sesión 13</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
+
 <body>
     <h1>Ejercicio 1 - Sesión 13</h1>
+    <h2>Padding</h2>
+    <div class="pading1 dimensionescapa">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla provident animi debitis sit? Reiciendis iusto at
+        praesentium est repudiandae tempora minima incidunt debitis delectus nisi unde nemo dolorem, ipsum corrupti.
+    </div>
+
+    <div class="paddingGeneral dimensionescapa">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla provident animi debitis sit? Reiciendis iusto at
+        praesentium est repudiandae tempora minima incidunt debitis delectus nisi unde nemo dolorem, ipsum corrupti.
+    </div>
+
+    <div class="capaAlturaMin dimensionescapaA">
+        Quis porro similique pariatur facere omnis, quia natus, quaerat ducimus vero quasi enim quas iste reprehenderit
+        at blanditiis saepe libero fugit ratione, minus officia accusantium sequi? Rem molestias error cum.
+        Quia magni dolores accusamus maxime libero, voluptatem aspernatur ipsam sequi enim sunt harum architecto at.
+        Consequuntur at inventore enim placeat, sequi dignissimos animi adipisci! Rerum id quas voluptatum vitae ea.
+        Laudantium, natus. Aliquam id repellat illum porro voluptatum cum cumque? Soluta praesentium velit, quis
+        eligendi ipsam quisquam laborum voluptas deleniti saepe minus nam alias ipsa, pariatur libero fugit, amet
+        consequuntur?
+        Impedit fugiat quia sequi similique consequuntur voluptas, saepe accusantium ut nihil nostrum harum ea delectus
+        distinctio veniam autem earum nam doloremque suscipit quod quasi eos laborum voluptates. Eos, voluptate
+        voluptatem.
+        Suscipit debitis asperiores ex a necessitatibus voluptate et nam sed quia eos, vel, sapiente distinctio rem
+        dicta? Sequi deleniti voluptate expedita, velit, blanditiis minus neque maiores quas quaerat odio alias.
+        Dolorem, dignissimos quae earum perspiciatis cumque molestiae aliquid ab nemo quidem esse explicabo quo
+        laudantium enim reprehenderit fugiat neque tempora ullam odio, nesciunt ipsa natus consectetur soluta qui?
+        Similique, ducimus.
+        Labore sequi a maxime porro. Unde aut magni rerum, aliquam, facere eos sequi quo placeat, voluptates corporis
+        hic earum minima veniam recusandae dicta suscipit tempore repudiandae delectus? Possimus, necessitatibus quasi?
+        Velit accusantium cupiditate veniam debitis vitae explicabo id non enim reprehenderit, ratione ducimus tempora
+        sapiente omnis, magnam molestias dolorum quo quos quisquam suscipit quia consequatur distinctio laboriosam
+        veritatis! Ad, porro.
+        Quasi perferendis iste quibusdam, aliquid perspiciatis delectus nemo dicta soluta ex cumque aut ut voluptatem
+        porro? Quos labore reiciendis corporis architecto cum, itaque eaque exercitationem nobis minus veniam temporibus
+        hic.
+        Laudantium laboriosam commodi libero earum adipisci voluptatem at incidunt. Veniam blanditiis necessitatibus
+        expedita praesentium ipsum. Quo, architecto mollitia. Eveniet est quasi totam possimus! Molestias magni amet
+        quia, aliquam tempora earum.
+        Inventore temporibus itaque vitae non corporis aperiam maxime necessitatibus ipsum reiciendis, optio pariatur
+        unde obcaecati nesciunt labore fugiat fuga quis at eum? Amet ratione ducimus sunt eaque accusantium nihil ipsam.
+        Cumque odit accusantium esse magni, eaque labore sed assumenda consequuntur suscipit doloribus quo tempora
+        rerum? Sed similique reiciendis numquam minima sit perferendis ipsum commodi architecto in. Dignissimos rem
+        voluptas asperiores.
+        Odit a sapiente vero dolore, obcaecati aperiam, dolorem itaque quasi libero laboriosam voluptatibus repellat
+        debitis unde accusamus aut fuga deserunt sint optio doloremque! Consequatur fugit aspernatur nihil? Sed,
+        voluptates ea!
+        Distinctio possimus tempora ipsa sequi atque velit quis officia, facilis ipsum ad temporibus voluptatum minus
+        cumque similique impedit dolore asperiores, dolor illo et numquam sapiente odit totam repudiandae. Atque,
+        consectetur?
+        Aspernatur molestias commodi accusamus nostrum at officiis cum! Porro nostrum saepe recusandae cupiditate vero
+        nam voluptates soluta dolor maiores dolorem accusamus quam, totam veniam quae a distinctio nemo laborum.
+        Maiores!
+        Deserunt explicabo, nobis quas nam nesciunt blanditiis nihil veniam minima voluptatum dolorem itaque dicta enim
+        dolores molestiae voluptas aspernatur quo ratione! Reiciendis nesciunt maxime aperiam eveniet eos quo repellat
+        quisquam.
+        Asperiores neque, ab inventore commodi maiores placeat quae harum dignissimos. Explicabo, eos omnis pariatur
+        repellendus cupiditate provident, maiores hic nam, itaque repellat exercitationem consectetur aliquid! Dolores
+        doloribus ipsum nulla suscipit.
+        Nihil, accusamus animi rerum sequi nostrum officiis et, error dolorum voluptatem nam veniam cupiditate
+        architecto repellat libero voluptas soluta quibusdam fuga recusandae aliquam natus enim consequatur vel rem.
+        Est, perspiciatis!
+        Iure minima voluptates enim expedita saepe nam incidunt vel doloremque, accusantium, rerum magnam aperiam quae
+        nulla doloribus asperiores tempore commodi officia aspernatur eveniet veritatis tempora beatae nemo consequatur
+        consectetur. Eum?
+        Similique, sunt delectus deserunt ipsum aperiam ut. Saepe, quidem? Beatae sint deleniti debitis molestiae vitae
+        quia, at aspernatur ipsam incidunt, reiciendis earum numquam, facere soluta? In rerum aspernatur eligendi quia.
+        Mollitia qui vero ut officiis ipsam ullam, fugiat aut unde ab vel laudantium, odit repudiandae sapiente rerum
+        veritatis nisi voluptatem doloribus nostrum quibusdam maiores officia placeat quis. Quo, officia iure!
+        Quod eum magnam autem sapiente similique consequuntur magni reprehenderit quasi delectus facilis, iste minus
+        fugiat non maiores a quo eius, iusto assumenda est esse necessitatibus ipsum? Similique eaque suscipit
+        repellendus?
+        Vitae voluptatem est explicabo mollitia omnis deserunt asperiores reiciendis eum vel autem rem sed provident,
+        libero modi inventore earum qui eos voluptate esse nihil incidunt maxime totam nam quaerat. Rerum.
+        In voluptate fugit, hic animi iure est laborum architecto facilis qui ullam, odit nesciunt tempore cum eligendi
+        omnis laboriosam quam necessitatibus! Facere officiis, voluptas aut earum natus atque temporibus animi!
+        Porro tempore excepturi sequi, cumque officiis beatae illum mollitia deleniti. Quasi error fugit non eligendi
+        explicabo doloremque consequatur sunt ipsum, ducimus hic magni dolor commodi voluptate quidem veritatis vero
+        dignissimos?
+        Beatae minima, ipsum quibusdam qui quidem soluta! Ex, odit placeat. Molestias numquam nulla neque quod! Quam
+        vero ipsum alias quaerat amet et, accusantium consequuntur rem natus commodi, eum nesciunt animi.
+
+    </div>
+
+    <div class="capaMarginLeft">
+        Obligo a la capa horizontal a desplazarse
+    </div>
+
+    <h2>Outline</h2>
+
+    <div class="capaIzquierdaOutline">
+
+    </div>
+    <div class="capaDerechaOutline">
+    </div>
+
+
+    <h2>Offset</h2>
+    <div class="offset">
+        Offset: separación entre borde y outline
+    </div>
+
+    <h2>Trabajo con texto</h2>
+    <h3>Alineación</h3>
+
+    <p class="alineacionDerecha">Alineación derecha</p>
+    <p class="alineacionIzquierda">Alineación izquierda</p>
+    <p class="alineacionCentrada">Alineación centrada</p>
+    <p class="alineacionJustificada">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis blanditiis, ipsam
+        laborum, eos, recusandae reiciendis ad accusantium natus ab suscipit aperiam sequi porro culpa magni laboriosam.
+        Voluptas soluta amet dicta.</p>
+
+
+    <h3>Decoración de texto</h3>
+
+    <p class="tachado">Tachado</p>
+    <p class="subrallado">Subrallado</p>
+    <p class="sobrerrallado">Sobrerrallado</p>
+
+    <h3>Transformación del texto</h3>
+    <p class="minusculas">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci possimus libero voluptates,
+        mollitia, quos eveniet maiores expedita beatae, nobis assumenda quod aliquam sit reprehenderit dolor dicta!
+        Excepturi et illum pariatur.</p>
+    <p class="mayusculas">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate numquam aperiam dignissimos
+        nobis dolorem quis totam. Ea velit in veritatis. Beatae distinctio esse sint doloribus qui molestias magni cum
+        minima.</p>
+    <p class="capitalizadas">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure nihil est molestiae,
+        molestias consequatur dolorem velit esse explicabo debitis ab similique mollitia minus maiores ipsum quia
+        numquam dolor maxime nostrum.</p>
+
+    <h3>Identación o tabulado personalizado</h3>
+    <p class="identacion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis, veniam culpa. Molestiae
+        enim quis ad praesentium. Autem nemo optio ipsa vero explicabo. Modi inventore libero suscipit incidunt.
+        Reprehenderit, consectetur nesciunt!</p>
+
+    <h3>Espaciado entre letras</h3>
+    <p class="espacioLetra">Letras espaciadas</p>
+
+    <h3>Altura de líneas</h3>
+    <p class="alturaLinea">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ratione tenetur vero ad
+        officiis ipsam facilis blanditiis doloribus. Doloribus dolorum, reprehenderit eaque dolorem minima atque
+        reiciendis itaque tempore recusandae repellendus!Tempore laudantium dolorum officia neque iure tempora aut
+        maxime id quisquam et, harum esse. Unde eveniet officiis corrupti perferendis quasi ut recusandae ipsa totam
+        consequuntur, sunt assumenda eius ex! Aperiam.</p>
+
+    <h3>Cambio de dirección</h3>
+    <p class="direccion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ratione tenetur vero ad
+        officiis ipsam facilis blanditiis doloribus. Doloribus dolorum, reprehenderit eaque dolorem minima atque
+        reiciendis itaque tempore recusandae repellendus!Tempore laudantium dolorum officia neque iure tempora aut
+        maxime id quisquam et, harum esse. Unde eveniet officiis corrupti perferendis quasi ut recusandae ipsa totam
+        consequuntur, sunt assumenda eius ex! Aperiam.</p>
+
+    <h3>Espaciado entre palabras</h3>
+    <p class="espacioPalabras">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque omnis non natus quasi
+        veniam sequi ab delectus facilis suscipit sint inventore iusto, quam vel, culpa porro tempore eum nulla illo.
+    </p>
+
+    <h3>Sombreados</h3>
+    <p class="sombras">Probando sombras.</p>
+
+    <h3>Fuentes</h3>
+    <p class="fuente">Aplicando fon-face</p>
 </body>
+
 </html>
