Versión 1.1 de la rama 14: Enlaces y cositas

--- a/Sesión 14(28-10-2019)/Ejercicio1.html
+++ b/Sesión 14(28-10-2019)/Ejercicio1.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sesión 14 - Ejercicio 1</title>
     <link rel="stylesheet" href="css/estilos1.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="recursos/favicon.jfif">
 </head>
 
 <body>
@@ -15,6 +17,33 @@
     <p class="familiafuente1">
         Pruebo familia de fuente
     </p>
+
+    <h2>Estilos de fuente</h2>
+    <p class="estilofuentenormal">
+        Probando estilo fuente normal.
+    </p>
+
+    <p class="estilofuenteitalic">
+        Probando estilo fuente italic.
+    </p>
+
+    <p class="estilofuenteoblique">
+        Probando estilo fuente oblique.
+    </p>
+
+    <h2>Tamaño de fuente</h2>
+    <p>Ahora voy a probar el tamaño fuente <span class="tamaniofuente">sobre un span.</span></p>
+    <p class="tamaniofuente2">Ahora voy a utilizar una medida relativa.</p>
+
+    <h2>Ancho de fuente</h2>
+    <p>Probando el <span class="anchoFuente">ancho de fuente</span></p>
+
+    <h2>Font Variant</h2>
+    <p class="fontVariant">Small caps</p>
+    <p class="fontVariant1">Normal</p>
+
+    <h2>Prueba de iconos - Font Awesome</h2>
+    <i class='fa fa-cc-paypal' style='font-size:24px'></i>
 
 </body>
 
