Versión 1.1 de la ramaSesion15: Selectores avanzados, segunda parte.

--- a/Sesión 15(04-11-2019)/Ejercicio 2.html
+++ b/Sesión 15(04-11-2019)/Ejercicio 2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,77 @@
     <title>Ejercicio 2 - Sesión 15</title>
     <link rel="stylesheet" href="css/estilos2.css">
 </head>
+
 <body>
     <h1>Otro ejercicio con pseudocódigo</h1>
     <div>
         Situa el ratón debajo de este texto para mostrar el mensaje.
-        <p>¡¡¡Muéstrate!!!</p>
+        <p class="ocultar">¡¡¡Muéstrate!!!</p>
     </div>
+
+    <h3>Pseudoclase firstchild</h3>
+    <div>
+        <p>Este párrafo es primer hijo de div</p>
+    </div>
+
+    <h3>Pseudoelemento first line</h3>
+    <p class="primeralinea">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod veniam perspiciatis repellat praesentium amet.
+        Nihil, sint accusamus sunt beatae, eos possimus fugit corrupti ipsum autem ut culpa explicabo quis unde? Lorem
+        ipsum dolor sit amet consectetur adipisicing elit. Modi asperiores quia ipsum repudiandae at culpa quod
+        veritatis id corporis tempora neque illum, assumenda aperiam sint expedita architecto ducimus. Ea, iste.
+        In ipsa totam quae consequuntur odit alias, ad quasi sint! Distinctio, porro cumque perferendis minus expedita
+        explicabo non obcaecati eaque culpa accusantium temporibus, praesentium ipsum? Deleniti eius explicabo ut ipsa.
+        Culpa hic numquam repudiandae aliquid ipsa! Doloribus, rerum! Ea dolores necessitatibus enim consectetur.
+        Suscipit debitis facere odit. Rem autem omnis facere, debitis at vero quibusdam est esse totam cum harum!
+        Aspernatur autem ratione dignissimos at incidunt nostrum illum consequatur qui eius ad doloribus alias
+        doloremque earum eum molestiae ex repellat odit, voluptatibus corporis in vero libero maxime. Incidunt, amet
+        necessitatibus?
+    </p>
+
+    <p class="sangrado">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus a deleniti, fugiat quas sed, molestiae, quae
+        voluptatum beatae commodi repudiandae inventore saepe suscipit assumenda itaque omnis veniam veritatis
+        consequuntur vitae?
+        Minus ratione at provident accusamus assumenda unde reiciendis eaque vero, facilis recusandae. Velit est tempore
+        quam odit minus, animi quo earum molestiae eum aspernatur voluptatum! Tempore consequatur eos quasi hic.
+        Quo harum error eius commodi, sint excepturi quam ea hic doloremque, tenetur qui consequuntur architecto quas
+        nostrum molestias laborum? Voluptatibus est placeat consequatur at harum doloribus dicta quod. Aliquam,
+        recusandae?
+        Culpa architecto corporis nulla laboriosam id, omnis doloribus iusto perferendis incidunt ad consequatur!
+        Inventore, eveniet nostrum iure esse repellat modi laudantium tempore nesciunt facere voluptas et impedit
+        distinctio ipsa architecto?
+    </p>
+
+    <h3>Pseudoelemento first letter</h3>
+    <p class="primeraletra">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit excepturi inventore quam voluptatem, architecto
+        ea accusamus praesentium delectus? Beatae, reiciendis. Nihil harum neque vel culpa expedita perspiciatis
+        possimus, sapiente fuga!
+        Recusandae ducimus eveniet illo optio quis sequi minus esse non magnam sapiente, adipisci dolorum magni itaque
+        nulla ullam maiores quasi quam dicta animi dolores veniam ab rem et! Praesentium, in.
+        Sit, quae. Rem sint et veritatis eveniet accusantium iste dolore minus exercitationem provident commodi nobis
+        enim dolor excepturi iure, rerum ullam consequuntur dignissimos porro fuga, delectus voluptates aspernatur aut.
+        Tempore!
+        Tempora voluptatibus molestias voluptatum nostrum culpa excepturi dicta consequuntur debitis vel, aut totam,
+        animi mollitia quos explicabo quaerat maxime? Esse, dicta sapiente enim natus dolorem asperiores quo optio hic
+        alias?
+    </p>
+
+    <h3>Pseudoelemento Before</h3>
+    <h6>1</h6>
+    <h6>2</h6>
+    <h6>3</h6>
+    <h6>4</h6>
+    <h6>5</h6>
+    <h6>6</h6>
+    <h6>7</h6>
+
+    <h3>Pseudoelemento After</h3>
+    <h5>Pelirrojo</h5>
+    <h5>Ceporro</h5>
+    <h5>Segurata</h5>
+    <h5>Secretario</h5>
 </body>
+
 </html>
