--- a/Sesión 16(07-11-2019)/ejercicio1.html
+++ b/Sesión 16(07-11-2019)/ejercicio1.html
@@ -29,7 +29,7 @@
     </span>
 
     <h2>Propiedad visibility</h2>
-    <h3>Visibility - hiddem - No se muestra, pero ocupa espacio</h3>
+    <h3>Visibility: hidden - No se muestra, pero ocupa espacio</h3>
     <div class="capaoculta">
         Esta capa estará oculta.
     </div>
