--- a/Sesión 17(11-11-2019)/ejercicio1.html
+++ b/Sesión 17(11-11-2019)/ejercicio1.html
@@ -143,7 +143,8 @@
     obcaecati?
     Facilis possimus quos sunt quas, nostrum eum ducimus quae placeat, libero molestias, rem necessitatibus omnis eos
     maxime provident dolor illum iste id unde corporis animi repellat minus. Dolor, fugiat quis?
-
+    
+    <h2>Position absolute</h2>
     <div class="capaestandar texto positionabsolute">
         Este div contiene un elemento posicionado con absolute.
     </div>
